--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "authors": [
     "Dionysis Zindros <dionyziz@gmail.com>"
+    "Nikolaos Kamarinakis <nikolaskam@gmail.com>"
   ],
   "license": "MIT",
   "ignore": [
